--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -9,6 +9,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
         py-version: [3.10, 3.11, 3.12]
+        exclude:
+          - py-version: 3.12
+            os: macos-14
+            
         
     steps:
     - name: Set up Python ${{ matrix.py-version }}
