--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,16 +4,19 @@ on: [push]
 
 jobs:
   build:
-   strategy:
-    fail-fast: false
-    matrix:
+    strategy:
+      fail-fast: false
+      matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
         py-version: [3.10, 3.11, 3.12]
         exclude:
-          - py-version: 3.12
-            os: macos-14
-   runs-on: ${{ matrix.os }    
-   steps:
-    - name: Set up Python ${{matrix.os}}
-      run: ${{matrix.py-version}}
-     
+          - os: macos-14
+            py-version: 3.12
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Set up Python ${{ matrix.py-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.py-version }}
